# platformer-game

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Game.html  Game.js  Game.wasm  Makefile  build.ninja  buildRaylib.sh  buildWeb.sh  cmake_install.cmake  shell.html
.github/workflows/: deploy.yml
build_web/: Game.html  Game.js  Game.wasm
docs/: raygui.md
src/: config.h  main.c  vectorMath.h
src/components/: atlas.h  collision.h  edges.h  tile.h  tilemap.h
src/events/: event.h  eventDispatcher.c  eventDispatcher.h
src/events/listeners/: inputListeners.c  inputListeners.h  physicsListeners.c  physicsListeners.h
src/include/: gui.h
src/input/: input.c  input.h
src/prototypes/: movementPrototype.h  physicsEntityPrototype.h
src/scenes/: gameplayScene.c  gameplayScene.h  mapEditorScene.c  mapEditorScene.h  menuScene.c  menuScene.h  pauseScene.c  pauseScene.h  scene.h  sceneManager.c  sceneManager.h
src/systems/: collisionSystem.c  collisionSystem.h
src/tests/: testInputCommands.h
src/types/: componentTypes.h
src/util/: glfw_wrapper.h
